Changelog
=========

3.0.0 (unreleased)
------------------

- Drop plone 4.2 support (including python 2.6). [lknoepfel]

- Sort items in cart by date added. [lknoepfel]


2.3.3 (2017-12-11)
------------------

- Fix upgrade step fix. [jone]

2.3.2 (2017-12-11)
------------------

- Fix upgrade step (dictionary changed size during iteration). [jone]

2.3.1 (2017-12-11)
------------------

- Show country in mails. [jone]

2.3.0 (2017-08-29)
------------------

- Made sku code searchable.
  [lknoepfel]


2.2.0 (2017-06-26)
------------------

- Enable decimal numbers for dimensions.
  [lknoepfel]

- Enable different units for dimension entry and price.
  Eg. input an amount in g and display the price per kg.
  [lknoepfel]

- Added dimensions to shopitems which can be specified by the user.
  [lknoepfel]

- Moved comments field to the order review step.
  This allowes the user to add information he was not able to provide with the standard field.
  [lknoepfel]

- The compact view is now the default view.
  The old default view has been removed because it didn't work.
  [lknoepfel]

- Make variations and unit searchable.
  [lknoepfel]


2.1.0 (2017-01-04)
------------------

- Drop support for Plone 4.1.
  [mbaechtold]

- Use uid as the key for storing category ranks, not the category object itself.
  This makes the category ranks serializable and thus publishable for "ftw.publisher".
  [mbaechtold]


2.0.10 (2016-11-28)
-------------------

- Added unit to shop item.
  [lknoepfel]

- Make variations a mapping when saving to the annotation storage.
  [raphael-s]


2.0.9 (2016-11-11)
------------------

- Fix hidden uid inputs. They had type=text too.
  [mathias.leimgruber]


2.0.8 (2016-03-30)
------------------

- Fix adjust styling for shopitem variation
  [elioschmutz]


2.0.7 (2015-06-18)
------------------

- Fixed variation js bug.
  [lknoepfel]

- Fixed bug in edit variations where variations didn't get activated.
  [lknoepfel]


2.0.6 (2015-03-06)