@@ -4,10 +4,11 @@ Changelog
 3.0.0 (unreleased)
 ------------------
 
+- Calculate and display price per item. [lknoepfel]
+
 - Drop plone 4.2 support (including python 2.6). [lknoepfel]
 
 - Sort items in cart by date added. [lknoepfel]
-
 
 2.3.3 (2017-12-11)
 ------------------
